第八天作业完成

--- a/day8/index.html
+++ b/day8/index.html
@@ -22,17 +22,45 @@
 
     <section id="pic">
             <section id="pic-content">
-              <div id="page"></div>
+              <div id="page">1</div>
+              <div id="page">2</div>
+              <div id="page">3</div>
+              <div id="page">4</div>
             </section>
     </section>
     
-    <section></section>
-    <section id="three-colom"></section>
-    <section id="four-colom"></section>
-    <section id="three-colom"></section>
+    <section class="nav">
+        <div id="line1"></div>
+        <section id="nav-content">
+            <div id="tab">HOME</div>
+            <div id="tab-d">PROFILE</div>
+            <div id="tab-d">ABOUT</div>
+            <div id="tab-line"></div>
+        </section>
+        <div id="line2"></div>
+    </section>
+    <section id="main-content">
+            <div class="box1">this is content1</div>
+            <div class="box1">this is content1</div>
+            <div class="box1">this is content1</div>
+    </section>
+
+    <section id="main-content">
+            <div class="box1">this is content1</div>
+            <div class="box1">this is content1</div>
+            <div class="box1">this is content1</div>
+            <div class="box1">this is content1</div>
+    </section>
+
+    <section id="main-content">
+            <div class="box1">this is content1</div>
+            <div class="box1">this is content1</div>
+            <div class="box1">this is content1</div>
+    </section>
 
 
 
-    <footer></footer>
+
+    <footer>2018 maybe</footer>
 </body>
 </html>
